--- a/segurenta/src/app/shared/components/register-property/register-property.component.html
+++ b/segurenta/src/app/shared/components/register-property/register-property.component.html
@@ -40,50 +40,74 @@
                                             <app-map></app-map>
                                         </div>
                                         <div class="col">
-                                            <form autocomplete="off ">
+                                            <form autocomplete="off " (ngSubmit)="sendAddress()" [formGroup]="addressForm">
                                                 <mat-form-field class="full-width ">
-                                                    <input autocomplete="off" type="text" matInput placeholder="Nombre del inmueble (Alias) " required>
+                                                    <input autocomplete="off" type="text" 
+                                                    matInput placeholder="Nombre del inmueble (Alias)" 
+                                                    formControlName = "alias"
+                                                    [(ngModel)]="address.alias" required>
                                                 </mat-form-field>
                                                 <div class="row ">
                                                     <div class="col-8 ">
                                                         <mat-form-field class="full-width ">
-                                                            <input type="text " matInput placeholder="Calle, Num. Ext. e Int. " required>
+                                                            <input type="text " matInput 
+                                                            placeholder="Calle, Num. Ext. e Int. " [(ngModel)]="address.calle" 
+                                                            formControlName = "calle" required>
                                                         </mat-form-field>
                                                     </div>
                                                     <div class="col-4 ">
                                                         <mat-form-field class="full-width ">
-                                                            <input type="text " matInput placeholder="C.P. " required>
+                                                            <input type="text " matInput 
+                                                            placeholder="C.P. " 
+                                                            [(ngModel)]="address.codigoPostal" required
+                                                            formControlName = "codigoPostal">
                                                         </mat-form-field>
                                                     </div>
                                                 </div>
                                                 <div class="row ">
                                                     <div class="col ">
                                                         <mat-form-field class="full-width ">
-                                                            <input type="text " matInput placeholder="Del. " required>
+                                                            <input type="text " matInput 
+                                                            placeholder="Del. " 
+                                                            [(ngModel)]="address.delegacion" required
+                                                            formControlName = "delegacion">
                                                         </mat-form-field>
                                                     </div>
                                                     <div class="col ">
                                                         <mat-form-field class="full-width ">
-                                                            <input type="text " matInput placeholder="Col. " required>
+                                                            <input type="text " matInput 
+                                                            placeholder="Col. " 
+                                                            [(ngModel)]="address.colonia" required
+                                                            formControlName = "colonia">
                                                         </mat-form-field>
                                                     </div>
                                                 </div>
                                                 <div class="row ">
                                                     <div class="col ">
                                                         <mat-form-field class="full-width ">
-                                                            <input type="text " matInput placeholder="Ciudad " required>
+                                                            <input type="text " matInput 
+                                                            placeholder="Ciudad " 
+                                                            [(ngModel)]="address.ciudad" required
+                                                            formControlName = "ciudad">
+                                                            
                                                         </mat-form-field>
                                                     </div>
                                                     <div class="col ">
                                                         <mat-form-field class="full-width ">
-                                                            <input type="text " matInput placeholder="País " required>
+                                                            <input type="text " matInput 
+                                                            placeholder="País " 
+                                                            [(ngModel)]="address.pais" required
+                                                            formControlName = "pais">
                                                         </mat-form-field>
                                                     </div>
                                                 </div>
                                                 <mat-form-field class="full-width ">
-                                                    <textarea matInput placeholder="Descripción general de la propiedad " required></textarea>
+                                                    <textarea matInput 
+                                                    placeholder="Descripción general de la propiedad " 
+                                                    [(ngModel)]="address.descripcion" required
+                                                    formControlName = "descripcion"></textarea>
                                                 </mat-form-field>
-                                                <button class="btn btn-outline-light btn-sm">Guardar para después</button>
+                                                <button class="btn btn-outline-light btn-sm" (click)="sendAddress()">Guardar para después</button>
                                             </form>
                                         </div>
                                     </div>
@@ -113,7 +137,7 @@
                         </div>
                         <div *ngIf="n === 3" class="col-12">
                             <div class="container-fluid">
-                                    <form autocomplete="off ">
+                                    <form autocomplete="off " (ngSubmit)="sendProperty()" [formGroup]="propertyForm">
                                             <hr>
                                             <h3 class="text-blue">Tipo de Propiedad</h3>
                                             <div class="col-12 ">
@@ -126,25 +150,34 @@
                                             <div class="d-inline mr-5 ">
                                                 <mat-label>$ </mat-label>
                                                 <mat-form-field>
-                                                    <input type="number " matInput required>
+                                                    <input type="number " matInput 
+                                                    [(ngModel)]="property.rentaMensual" 
+                                                    formControlName = "rentaMensual"
+                                                    required>
                                                 </mat-form-field>
                                                 <mat-label> Renta al mes</mat-label>
                                             </div>
                                             <div class="d-inline mx-5 ">
                                                 <mat-label>$ </mat-label>
                                                 <mat-form-field>
-                                                    <input type="number " matInput required>
+                                                    <input type="number " matInput 
+                                                    [(ngModel)]="property.precioVenta" 
+                                                    formControlName = "precioVenta"
+                                                    required>
                                                 </mat-form-field>
                                                 <mat-label> Precio de venta</mat-label>
                                             </div>
                                             <div class="d-inline ml-5 ">
                                                 <mat-label>$ </mat-label>
                                                 <mat-form-field>
-                                                    <input type="number " matInput required>
+                                                    <input type="number " matInput 
+                                                    [(ngModel)]="property.mantenimiento" 
+                                                    formControlName = "mantenimiento"
+                                                    required>
                                                 </mat-form-field>
                                                 <mat-label> Mantenimiento</mat-label>
                                             </div>
-                                            <button class="btn btn-outline-light btn-sm">Guardar para después</button>
+                                            <button (click)="sendProperty()" class="btn btn-outline-light btn-sm">Guardar para después</button>
                                         </form> 
                             </div>
                             
