--- a/segurenta/src/app/shared/components/scheduler/form-event/form-event.component.css
+++ b/segurenta/src/app/shared/components/scheduler/form-event/form-event.component.css
@@ -7,3 +7,17 @@
 .fondo {
     background: #ffffff;
 }
+
+.font {
+    font-size: 1em
+}
+
+.mat-form-field-appearance-legacy .mat-form-field-infix {
+    padding: 0em 0 !important;
+}
+
+
+/* md-input-container>>>.mat-input-wrapper {
+    padding: 5px;
+    3px;
+} */
