--- a/segurenta/src/app/shared/components/scheduler/scheduler.component.css
+++ b/segurenta/src/app/shared/components/scheduler/scheduler.component.css
@@ -12,10 +12,40 @@ pre {
 }
 
 .fondo {
-    background: #d2d2d2;
+    background: #3f4458;
+    /* background: #535353; */
 }
 
 .txt-title-muted {
     font-size: 1.5rem !important;
-    color: #FFFFFF;
+    color: #FFFFFF !important;
+    ;
 }
+
+.txt-title {
+    font-size: 4rem !important;
+    color: #FFFFFF !important;
+}
+
+.inline-flatpickr .form-control {
+    display: none;
+}
+
+.borde {
+    padding-left: 3em;
+    padding-right: 3em;
+}
+
+
+/* .cal-week-view .cal-time-events {
+    max-height: 300px;
+    overflow-y: auto;
+}
+
+.cal-day-headers {
+    margin-right: 14.5px;
+}
+
+.cal-day-columns {
+    height: 100%;
+} */
