--- a/segurenta/src/app/shared/components/scheduler/week/week.component.css
+++ b/segurenta/src/app/shared/components/scheduler/week/week.component.css
@@ -1,3 +1,146 @@
+.cursor_pointer {
+    cursor: pointer;
+}
+
 .disable-hover {
     pointer-events: none;
+}
+
+.color-txt {
+    color: white !important;
+}
+
+.toggleBox {
+    display: flex;
+    border: 1px solid rgb(109, 109, 109);
+    background-color: white;
+    width: 12rem;
+    min-height: 6rem;
+    position: absolute;
+    z-index: 100;
+    padding: 10px;
+}
+
+.title-property {
+    font-size: .6em;
+}
+
+.title-cita {
+    font-size: 1em;
+}
+
+.text-detail {
+    font-size: .8em;
+}
+
+.btn-modal {
+    padding: 0.04rem .5rem !important;
+    font-size: 0.7rem !important;
+}
+
+.btn-citas {
+    background: black;
+    color: white;
+    width: 60% !important;
+    padding: 0.04rem .5rem !important;
+    font-size: 0.7rem !important;
+    border-color: black !important;
+}
+
+.padding-cero {
+    padding: 0px
+}
+
+.inline-flatpickr .form-control {
+    display: none;
+}
+
+.scroll-week {
+    height: 80vh;
+    overflow: scroll;
+}
+
+.scroll-cita {
+    height: 39vh;
+    overflow: scroll;
+}
+
+
+/* Tab Navigation */
+
+.nav-tabs .nav-link {
+    border-bottom: none !important;
+    border-color: none !important;
+    color: black !important;
+}
+
+
+/* .nav-tabs .nav-link.active { */
+
+.nav-tabs .nav-item.show .nav-link,
+.nav-tabs .nav-link.active {
+    border-color: none !important;
+}
+
+.nav-tabs:hover {
+    border-bottom: none !important;
+    border-color: none !important;
+}
+
+.nav-tabs .nav-link.active {
+    border-color: none !important;
+    color: white !important;
+}
+
+.nav-item {
+    background: #9a9a9a;
+    width: 50%;
+    font-size: .8rem;
+    color: white;
+}
+
+.nav-item .active {
+    background: black;
+}
+
+
+/* .nav-tabs {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+.nav-tabs>li>a {
+    background: #DADADA;
+    border-radius: 0;
+    box-shadow: inset 0 -8px 7px -9px rgba(0, 0, 0, .4), -2px -2px 5px -2px rgba(0, 0, 0, .4);
+}
+
+.nav-tabs>li.active>a,
+.nav-tabs>li.active>a:hover {
+    background: #F5F5F5;
+    box-shadow: inset 0 0 0 0 rgba(0, 0, 0, .4), -2px -3px 5px -2px rgba(0, 0, 0, .4);
+} */
+
+
+/* Tab Content */
+
+.tab-pane {
+    background: rgb(255, 255, 255);
+    box-shadow: 0 0 4px rgba(0, 0, 0, .4);
+    border-radius: 0px 0px 5px 5px;
+    text-align: center;
+    padding: 10px;
+}
+
+.imgRedonda {
+    width: 50px;
+    height: 50px;
+    border-radius: 150px;
+}
+
+.cal-day-segment-disabled,
+.cal-day-segment-disabled:hover {
+    background-color: grey !important;
+    cursor: not-allowed;
 }
