--- a/segurenta/src/app/shared/components/scheduler/week/week.component.html
+++ b/segurenta/src/app/shared/components/scheduler/week/week.component.html
@@ -1,14 +1,90 @@
 <div class="row text-center">
-    <div class="col-1 text-center cursor_pointer" mwlCalendarPreviousView [view]="view" [(viewDate)]="viewDate">
-        <h1>&lsaquo;
-        </h1>
+    <div class="col-9 row">
+        <div class="col-1 text-center cursor_pointer" mwlCalendarPreviousView [view]="'week'" [(viewDate)]="viewDate">
+            <h1 class="color-txt">&lsaquo;</h1>
+        </div>
+        <div class="col-10 text-center">
+            <h3 class="color-txt">{{ viewDate | calendarDate:('week' + 'ViewTitle'):locale | titlecase }}</h3>
+        </div>
+        <div class="col-1 text-center cursor_pointer" mwlCalendarNextView [view]="'week'" [(viewDate)]="viewDate">
+            <h1 class="color-txt">&rsaquo;</h1>
+        </div>
+        <div class="col-12">
+            <!--  scroll-week -->
+            <!-- <mwl-calendar-week-view [viewDate]="viewDate" [events]="events" [locale]="locale" [hourSegmentTemplate]="weekViewHourSegmentTemplate"></mwl-calendar-week-view> -->
+            <!-- [hourSegmentModifier]="hourSegmentModifier" -->
+            <mwl-calendar-week-view [viewDate]="viewDate" [events]="events" [dayStartHour]="6" [hourSegments]="1" [locale]="locale" [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)" [hourSegmentTemplate]="weekViewHourSegmentTemplate">
+            </mwl-calendar-week-view>
+            <!-- [dayStartHour]="7" [dayEndHour]="20" -->
+        </div>
     </div>
-    <div class="col-10 text-center">
-        <h3>{{ viewDate | calendarDate:(view + 'ViewTitle'):locale | titlecase }}</h3>
+    <div class="col-3">
+        <!-- Calendar Month -->
+        <div class="inline-flatpickr">
+            <input class="form-control" type="text" mwlFlatpickr [(ngModel)]="viewDate" [altInput]="true" [convertModelValue]="true" [inline]="true">
+        </div>
+        <br>
+
+        <!-- Nav tabs -->
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" id="soli-tab" data-toggle="tab" href="#soli" role="tab" aria-controls="soli" aria-selected="true">SOLICITUDES</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="most-tab" data-toggle="tab" href="#most" role="tab" aria-controls="most" aria-selected="false">MOSTRADAS</a>
+            </li>
+        </ul>
+        <!-- Tab panes -->
+        <div class="tab-content scroll-cita" id="myTabContent">
+            <div class="tab-pane fade show active" id="soli" role="tabpanel" aria-labelledby="soli-tab">
+                <ul class="list-unstyled">
+                    <li *ngFor="let number of [1,2,3,4]">
+                        <div class="row padding-cero">
+                            <div class="col-3 padding-cero">
+                                <img class="imgRedonda" src="https://i.pinimg.com/originals/b1/bb/ec/b1bbec499a0d66e5403480e8cda1bcbe.png" alt="{{number}}">
+                            </div>
+                            <div class="col-9 padding-cero">
+                                <p class="mt-0 mb-1 text-detail text-left">
+                                    <strong class="title-cita">List-based media object</strong><br> miércoles, 1 de mayo de 2019 <br> 3:00 PM a 4:00 PM
+                                </p>
+                            </div>
+                            <div class="col-6 padding-cero" style="text-align: right;">
+                                <button type="button" (click)="cancelNewEvent()" class="btn btn-primary btn-sm btn-citas">Cancelar</button>
+                            </div>
+                            <div class="col-6 padding-cero">
+                                <button type="button" (click)="saveNewEvent()" class="btn btn-primary btn-sm btn-citas">Guardar</button>
+                            </div>
+                        </div>
+                        <hr>
+                    </li>
+                </ul>
+            </div>
+            <div class="tab-pane fade" id="most" role="tabpanel" aria-labelledby="most-tab">
+                <ul class="list-unstyled">
+                    <li *ngFor="let number of [1,2,3,4]">
+                        <div class="row padding-cero">
+                            <div class="col-3 padding-cero">
+                                <img class="imgRedonda" src="https://cdn.pixabay.com/photo/2014/04/03/10/32/user-310807__340.png" alt="{{number}}">
+                            </div>
+                            <div class="col-9 padding-cero">
+                                <p class="mt-0 mb-1 text-detail text-left">
+                                    <strong class="title-cita">List-based media object</strong><br> miércoles, 1 de mayo de 2019 <br> 3:00 PM a 4:00 PM
+                                </p>
+                            </div>
+                            <div class="col-6 padding-cero" style="text-align: right;">
+                                <button type="button" (click)="cancelNewEvent()" class="btn btn-primary btn-sm btn-citas">Finalizar</button>
+                            </div>
+                            <div class="col-6 padding-cero">
+                                <button type="button" (click)="saveNewEvent()" class="btn btn-primary btn-sm btn-citas">Perfilar</button>
+                            </div>
+                        </div>
+                        <hr>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <div class="col-1 text-center cursor_pointer" mwlCalendarNextView [view]="view" [(viewDate)]="viewDate">
-        <h1>&rsaquo;</h1>
-    </div>
+
     <ng-template #weekViewHourSegmentTemplate let-segment="segment" let-locale="locale" let-segmentHeight="segmentHeight" let-isTimeLabel="isTimeLabel">
         <div #segmentElement class="cal-hour-segment" [style.height.px]="segmentHeight" [class.cal-hour-start]="segment.isStart" [class.cal-after-hour-start]="!segment.isStart" [ngClass]="segment.cssClass" (mousedown)="startDragToCreate(segment, $event, segmentElement)">
             <div class="cal-time" *ngIf="isTimeLabel">
@@ -16,10 +92,24 @@
             </div>
         </div>
     </ng-template>
-    <div class="col-12">
-        <!-- <mwl-calendar-week-view [viewDate]="viewDate" [events]="events" [locale]="locale" [hourSegmentTemplate]="weekViewHourSegmentTemplate"></mwl-calendar-week-view> -->
-        <mwl-calendar-week-view [viewDate]="viewDate" [events]="events" [dayStartHour]="9" [dayEndHour]="18" [hourSegments]="4" [locale]="locale" [refresh]="refresh" (eventClicked)="handleEvent('Clicked', $event.event)" (eventTimesChanged)="eventTimesChanged($event)"
-            [hourSegmentTemplate]="weekViewHourSegmentTemplate">
-        </mwl-calendar-week-view>
+</div>
+
+<div class="toggleBox" *ngIf="showForm" [ngStyle]="{'top.px': topDiv, 'left.px': leftDiv}">
+    <div class="row">
+        <div class="col-12">
+            <p class="title-property">Some Information</p>
+        </div>
+        <div class="col-12">
+            <p class="title-property">
+                {{ formatDates() }}
+                <br><strong>{{newEvent.start | date: 'shortTime'}}</strong>&nbsp;&nbsp;a&nbsp;&nbsp;<strong>{{newEvent.end | date: 'shortTime'}}</strong>
+            </p>
+        </div>
+        <div class="col-6 padding-cero">
+            <button type="button" (click)="cancelNewEvent()" class="btn btn-primary btn-sm btn-modal">Cancelar</button>
+        </div>
+        <div class="col-6 padding-cero">
+            <button type="button" (click)="saveNewEvent()" class="btn btn-primary btn-sm btn-modal">Guardar</button>
+        </div>
     </div>
 </div>
