--- a/segurenta/src/app/shared/components/login/login.component.html
+++ b/segurenta/src/app/shared/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="txt-right">
+<!-- <div class="txt-right">
     <h2 mat-dialog-title><small class="txt-title-muted">Ingresar </small><span class="txt-title"> Login</span></h2>
 </div>
 <mat-grid-list cols="12" rowHeight="1:3">
@@ -37,4 +37,59 @@
         </div>
 
     </mat-grid-tile>
-</mat-grid-list>
+</mat-grid-list> -->
+
+
+
+<div class="col-12 my-4">
+    <div class="row">
+        <div class="col-1">
+            <button type="button" #closeModal class="close">
+                            <h1 class="thin">X</h1>
+                        </button>
+        </div>
+        <div class="col-11">
+            <div class="text-right align-middle">
+                <h2><small class="txt-title-muted">Ingresar </small><span class="txt-title"> Login</span></h2>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="col-12 my-4">
+    <div class="row">
+        <div class="col-6">
+            <!-- <div class="row"> -->
+            <form [formGroup]="loginForm" (ngSubmit)="logIn()" novalidate>
+                <mat-form-field class="full-width">
+                    <input type="text" class="input-form" matInput placeholder="Correo Electrónico / Usuario" formControlName="username" autocomplete="off" required>
+                    <mat-error *ngIf="loginForm.get('username').invalid">{{getErrorMessage("username")}}</mat-error>
+                </mat-form-field>
+                <mat-form-field class="full-width mb-3">
+                    <input [type]="isHide ? 'password' : 'text'" class="input-form" matInput placeholder="Contraseña" formControlName="password" required>
+                    <fa-icon *ngIf="isHide" matSuffix (click)="isHide = !isHide" [icon]="['fas', 'eye-slash']"></fa-icon>
+                    <fa-icon *ngIf="!isHide" matSuffix (click)="isHide = !isHide" [icon]="['fas', 'eye']"></fa-icon>
+                    <mat-error *ngIf="loginForm.get('password').invalid">{{getErrorMessage("password")}}</mat-error>
+                </mat-form-field>
+                <a (click)="openRecovery()" id="liga" class="full-width liga">Recuperar mi contraseña</a>
+                <button type="submit" class="btn-rounded full-width" mat-raised-button>Ingresar</button>
+
+                <mat-error class="mt-4 text-center">{{errorLogin}}</mat-error>
+            </form>
+            <!-- </div> -->
+        </div>
+        <div class="col-1">
+            <h1 class="txt-muted">ó</h1>
+        </div>
+        <div class="col-5">
+            <h1 class="txt-muted full-width">Ingresar con:</h1>
+            <div class="flex">
+                <button mat-fab class="btn-black">
+                                    <fa-icon [icon]="['fab', 'facebook-f']" size="2x"></fa-icon>
+                                </button>
+                <button mat-fab class="btn-black">
+                                    <fa-icon [icon]="['fab', 'google']" size="2x"></fa-icon>
+                                </button>
+            </div>
+        </div>
+    </div>
+</div>
